@@ -42,7 +42,7 @@ SUPPORTFILES = first.c test.h
 noinst_PROGRAMS = lib500 lib501 lib502 lib503 lib504 lib505 lib506	\
   lib507 lib508 lib509 lib510 lib511 lib512 lib513 lib514 lib515 lib516	\
   lib517 lib518 lib519 lib520 lib521 lib523 lib524 lib525 lib526 lib527	\
-  lib529 lib530
+  lib529 lib530 lib532
 
 lib500_SOURCES = lib500.c $(SUPPORTFILES)
 lib500_LDADD = $(LIBDIR)/libcurl.la
@@ -145,6 +145,7 @@ lib525_LDADD = $(LIBDIR)/libcurl.la
 lib525_DEPENDENCIES = $(LIBDIR)/libcurl.la
 
 lib526_SOURCES = lib526.c $(SUPPORTFILES)
+lib526_CFLAGS = -DLIB526
 lib526_LDADD = $(LIBDIR)/libcurl.la
 lib526_DEPENDENCIES = $(LIBDIR)/libcurl.la
 
@@ -162,3 +163,8 @@ lib530_SOURCES = lib530.c $(SUPPORTFILES)
 lib530_CFLAGS = -DLIB530
 lib530_LDADD = $(LIBDIR)/libcurl.la
 lib530_DEPENDENCIES = $(LIBDIR)/libcurl.la
+
+lib532_SOURCES = lib526.c $(SUPPORTFILES)
+lib532_CFLAGS = -DLIB532
+lib532_LDADD = $(LIBDIR)/libcurl.la
+lib532_DEPENDENCIES = $(LIBDIR)/libcurl.la
